# devfs

./: CMakeLists.txt  README.md  devfs.c  devfs_blkdev.c  devfs_chdev.c  devfs_inode.c  devfs_os.c
include/: devfs.h  devfs_cfg.h  devfs_dev.h  devfs_inode.h  devfs_list.h  devfs_os.h
zephyr/drivers/: devfs_blkdev_flash.c  devfs_chdev_led.c
zephyr/samples/drivers/flash/: Kconfig  prj.conf  sample.yaml
zephyr/samples/drivers/flash/src/: main.c
zephyr/samples/drivers/led_gpio/: prj.conf  sample.yaml
zephyr/samples/drivers/led_gpio/src/: main.c
zephyr/samples/drivers/led_pwm/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
zephyr/samples/drivers/led_pwm/src/: main.c
